almost working gui

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 02_25_25/__pycache__/*
 03_04_25/card.py
 03_04_25/__pycache__/*
+02_25_25/__pycache__/CCDemo.cpython-310.pyc
+02_25_25/__pycache__/test_credit_card.cpython-310-pytest-8.3.4.pyc
